# ninjaipc

./: .gitignore
example/: shared_memory_client.cpp  shared_memory_server.cpp
src/: ninjaipc.h
test/: CMakeLists.txt  test_client.cpp  test_serv.cpp
